# Basalt

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/basalt-amdgpu/: Cargo.toml
crates/basalt-amdgpu/src/: enc.rs  hsaco.rs  lib.rs  lower.rs
crates/basalt-amdgpu/tests/: mma16x16_f16acc.rs  rdna3_dispatch.rs  stress_kernel.rs  tiled_sgemm_wmma.rs
crates/basalt-backend/: Cargo.toml
crates/basalt-backend/src/: backend.rs  elf.rs  lib.rs
crates/basalt-bir/: Cargo.toml
crates/basalt-bir/src/: ir.rs  lib.rs  parse.rs  print.rs  ty.rs
crates/basalt-bir/tests/: roundtrip.rs
crates/basalt-cli/: Cargo.toml
crates/basalt-cli/src/: main.rs
crates/basalt-cli/tests/: cpu_flag.rs  cpu_regalloc_flag.rs  ir_flag.rs  llvm_amdgpu_bin_flag.rs  nvidia_ptx_flag.rs  pipeline.rs
crates/basalt-clif/: Cargo.toml
crates/basalt-clif/src/: lib.rs
crates/basalt-diag/: Cargo.toml
crates/basalt-diag/src/: diag.rs  ecode.rs  lang.rs  lib.rs
crates/basalt-frontend-c/: Cargo.toml
crates/basalt-frontend-c/src/: ast.rs  lex.rs  lib.rs  parse.rs  pp.rs  token.rs
crates/basalt-frontend-c/tests/fixtures/: pp_include.h
crates/basalt-frontend-triton/: Cargo.toml
crates/basalt-frontend-triton/src/: ast.rs  lib.rs  parse.rs
crates/basalt-llvm/: Cargo.toml
crates/basalt-llvm/src/: cpu_flatten.rs  emit.rs  lib.rs  lower.rs
crates/basalt-llvm/src/cpu_flatten/: tests.rs
crates/basalt-llvm/src/emit/: tests.rs
crates/basalt-llvm/src/lower/: tests.rs
crates/basalt-llvm/tests/: link_and_run.rs  tiled_sgemm_wmma.rs
crates/basalt-mlir/: Cargo.toml
crates/basalt-mlir/src/: emit.rs  lib.rs  lower.rs
crates/basalt-mlir/src/emit/: tests.rs
crates/basalt-mlir/src/lower/: tests.rs
crates/basalt-mlir/tests/: nvptx_gpu_proof.rs  triton_nvptx_gpu_proof.rs
crates/basalt-passes/: Cargo.toml
crates/basalt-passes/src/: constfold.rs  dce.rs  divergence.rs  dom.rs  lib.rs  licm.rs  pipeline.rs  regalloc.rs  ssa.rs
crates/basalt-passes/tests/: dce.rs  dce_real_pipeline.rs  pipeline.rs  real_pipeline.rs  regalloc.rs  ssa.rs
crates/basalt-ptx/: Cargo.toml
crates/basalt-ptx/src/: emit.rs  lib.rs
crates/basalt-ptx/src/emit/: tests.rs
crates/basalt-runtime/: Cargo.toml
crates/basalt-runtime/src/: context.rs  dl.rs  driver.rs  error.rs  ffi.rs  lib.rs  module.rs
crates/basalt-runtime/src/hsa/: error.rs  executable.rs  ffi.rs  mod.rs  queue.rs  runtime.rs
crates/basalt-runtime/src/vulkan/: buffer.rs  device.rs  dispatch.rs  error.rs  ffi.rs  instance.rs  mod.rs  pipeline.rs
crates/basalt-runtime/tests/: cuda_driver.rs  hsa_runtime.rs  ptx_gpu_proof.rs  triton_ptx_gpu_proof.rs  vulkan_gpu_proof.rs
crates/basalt-rv/: Cargo.toml
crates/basalt-rv/src/: enc.rs  lib.rs  lower.rs  softfloat.rs  softfloat_ref.rs
crates/basalt-rv/src/testdata/: f32_add_specials_vectors.txt  f32_add_vectors.txt  f32_cmp_specials_vectors.txt  f32_cmp_vectors.txt  f32_div_specials_vectors.txt  f32_div_vectors.txt  f32_mul_specials_vectors.txt  f32_mul_vectors.txt  f32_to_i32_vectors.txt  f32_to_u32_vectors.txt  i32_to_f32_vectors.txt  u32_to_f32_vectors.txt
crates/basalt-sema/: Cargo.toml
crates/basalt-sema/src/: checker.rs  lib.rs  lower.rs  scope.rs  tests.rs  triton_check.rs  triton_check_tests.rs  triton_lower.rs  triton_ty.rs  ty.rs
crates/basalt-spirv/: Cargo.toml
crates/basalt-spirv/src/: emit.rs  lib.rs
crates/basalt-spirv/src/emit/: glcompute.rs  tests.rs
crates/basalt-tensix/: Cargo.toml
crates/basalt-tensix/src/: emit.rs  fission.rs  lib.rs  tdf.rs
crates/basalt-tensix/src/emit/: tests.rs
crates/basalt-tensix/src/fission/: tests.rs
crates/basalt-x86/: Cargo.toml
crates/basalt-x86/src/: enc.rs  lib.rs  oracle.rs  regalloc.rs
crates/basalt-x86/tests/: link_and_run.rs  link_and_run_regalloc.rs  pressure.rs  tiled_sgemm.rs  triton_link_and_run.rs
examples/: cpu_launch_add_i32.c  cpu_launch_device_helper_chain.c  cpu_launch_device_helper_square.c  cpu_launch_host_write_sum.c  cpu_launch_max_i32.c  cpu_launch_mma2x2.c  cpu_launch_mymathhomework.c  cpu_launch_spill_heavy_sum.c  cpu_launch_stress.c  cpu_launch_tiled_sgemm.c  cpu_launch_triton_matmul.c  cpu_launch_triton_vadd.c  cpu_launch_vadd.c  cpu_launch_vadd_host.c  cpu_launch_vadd_malloc.c
lang/: en.txt
tests/diff/: run_diff.sh
tests/diff/golden/: mymathhomework.txt  stress.txt  tri_matmul.txt  tri_vadd.txt  vector_add.txt
tests/diff/rdna3_sim/: run_kernel.py
tests/diff/rv32_sim/: run_kernel.sh  start.S  virt32.ld
tests/kernels/: cpu_launch_vadd_host.cu  cpu_launch_vadd_malloc.cu  deliberate_errors.cu  device_helper_chain.cu  device_helper_square.cu  hand_written.bir  mymathhomework.cu  stress.cu  tri_matmul.py  tri_vadd.py  vector_add.cu
