[package]
name = "basalt-backend"
version.workspace = true
edition.workspace = true

[dependencies]
basalt-bir = { path = "../basalt-bir" }
basalt-diag = { path = "../basalt-diag" }
object = { version = "0.39", default-features = false, features = ["write", "elf"] }

[dev-dependencies]
object = { version = "0.39", default-features = false, features = ["read", "elf"] }
