[package]
name = "basalt-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "basalt"
path = "src/main.rs"

[features]
llvm = ["dep:basalt-llvm", "basalt-llvm/llvm"]
mlir = ["dep:basalt-mlir"]
clif = ["dep:basalt-clif"]
ptx = []
spirv = []
tensix = []

[dependencies]
basalt-bir = { path = "../basalt-bir" }
basalt-diag = { path = "../basalt-diag" }
basalt-backend = { path = "../basalt-backend" }
basalt-frontend-c = { path = "../basalt-frontend-c" }
basalt-passes = { path = "../basalt-passes" }
basalt-sema = { path = "../basalt-sema" }
basalt-x86 = { path = "../basalt-x86" }
basalt-ptx = { path = "../basalt-ptx" }
basalt-amdgpu = { path = "../basalt-amdgpu" }
basalt-llvm = { path = "../basalt-llvm", optional = true }
basalt-mlir = { path = "../basalt-mlir", optional = true }
basalt-clif = { path = "../basalt-clif", optional = true }

[dev-dependencies]
object = { version = "0.39", default-features = false, features = ["read", "elf"] }
