[package]
name = "basalt-mlir"
version.workspace = true
edition.workspace = true

[dependencies]
basalt-bir = { path = "../basalt-bir" }
basalt-backend = { path = "../basalt-backend" }
basalt-diag = { path = "../basalt-diag" }
melior = { version = "0.27.2", optional = true }

[dev-dependencies]
basalt-frontend-c = { path = "../basalt-frontend-c" }
basalt-frontend-triton = { path = "../basalt-frontend-triton" }
basalt-sema = { path = "../basalt-sema" }
basalt-passes = { path = "../basalt-passes" }
basalt-runtime = { path = "../basalt-runtime" }

[features]
mlir = ["dep:melior"]
