[package]
name = "basalt-passes"
version.workspace = true
edition.workspace = true

[dependencies]
basalt-bir = { path = "../basalt-bir" }

[dev-dependencies]
basalt-backend = { path = "../basalt-backend" }
basalt-frontend-c = { path = "../basalt-frontend-c" }
basalt-sema = { path = "../basalt-sema" }
basalt-x86 = { path = "../basalt-x86" }
