[package]
name = "basalt-runtime"
version.workspace = true
edition.workspace = true

[dependencies]

[dev-dependencies]
basalt-backend = { path = "../basalt-backend" }
basalt-frontend-c = { path = "../basalt-frontend-c" }
basalt-passes = { path = "../basalt-passes" }
basalt-ptx = { path = "../basalt-ptx" }
basalt-sema = { path = "../basalt-sema" }
basalt-spirv = { path = "../basalt-spirv" }
